--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="./main.css" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z5Z2B2YF0N"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-Z5Z2B2YF0N');
+    </script>
+</head>
+
 <html>
 <div class="container">
     <p><svg height="100" width="100">
