--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <head>
     <link rel="stylesheet" href="./main.css" />
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z5Z2B2YF0N"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3XH5F5SDHB"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-Z5Z2B2YF0N');
+    
+      gtag('config', 'G-3XH5F5SDHB');
     </script>
 </head>
 
