--- a/index.html
+++ b/index.html
@@ -9,13 +9,26 @@
     
       gtag('config', 'G-3XH5F5SDHB');
     </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="CSS/partical.css">
+    <link rel="stylesheet" href="CSS/Slider.css">
 </head>
+<body id="home">
+    
+    <div id="particles-js"><canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;" width="629" height="532"></canvas></div>
 
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
+    <script src="JS/index.js"></script>
+    <script src="JS/particles.js"></script>
+    <script src="JS/app.js"></script>
+
+</body>
 <html>
-<div class="container">
+<!-- <div class="container">
     <p><svg height="100" width="100">
   <circle cx="50" cy="50" r="25" stroke="black" stroke-width="1" fill="none" />
 </svg> </p>
-</div>
+</div> -->
 </html>
